--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 server.port=8082
 spring.application.name=product-service
+
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
+spring.datasource.username=${PSQL_USERNAME}
+spring.datasource.password=${PSQL_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/${PSQL_DB_NAME}
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
