Add user ratings to user service

--- a/rating-service/src/main/resources/application.properties
+++ b/rating-service/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 server.port=8083
 spring.application.name=rating-service
 
+spring.datasource.username=${PSQL_USERNAME}
+spring.datasource.password=${PSQL_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/${PSQL_DB_NAME}
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
