Add Swagger docs to rating service

--- a/zuul-gateway/src/main/resources/application.properties
+++ b/zuul-gateway/src/main/resources/application.properties
@@ -8,6 +8,6 @@ zuul.routes.product-service.path=/product-service/**
 zuul.routes.product-service.url=http://localhost:8082/
 
 zuul.routes.rating-service.path=/rating-service/**
-zuul.routes.rating-service.url=https://poowish-rating-service.herokuapp.com/
+zuul.routes.rating-service.url=http://localhost:8083/
 
 
